[project]
name = "ai-travel-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "serpapi (>=0.1.5,<0.2.0)",
    "streamlit (>=1.43.0,<2.0.0)",
    "grandalf (>=0.8,<0.9)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-groq (>=0.2.5,<0.3.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
